adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet doloremque, et quas facilis velit ipsa quos ullam tenetur nesciunt totam quam, autem eos adipisci dignissimos, natus odio pariatur itaque maxime?</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id error, neque iste quas, iusto ipsum nobis mollitia ut eaque laboriosam non maxime doloribus commodi ipsam delectus quidem adipisci rem inventore!</p>
 </body>
 </html>
